Updated index.html and added new blogging-related files

--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
                             <span>HTML Course</span>
                             <small>Learn HTML Fundamentals</small>
                         </a>
+                        <a href="courses/blogging/intro.html" class="dropdown-item">
+                            <i class="fab fa-html5"></i>
+                            <span>Blogging Course</span>
+                            <small>Learn Blogging from beginner to advance</small>
+                        </a>
                         <!-- Add more courses here -->
                     </div>
                 </div>
@@ -354,6 +359,24 @@ class Developer {
                         </a>
                     </div>
                 </div>
+                <!-- BLOGGING COURSE -->
+                <div class="course-card" data-aos="fade-up">
+                    <div class="course-icon">
+                        <i class="fab fa-html5"></i>
+                    </div>
+                    <div class="course-content">
+                        <h3>Blogging Course</h3>
+                        <p>Make money online by <b>blogging</b> with profitable guidance.</p>
+                        <div class="course-meta">
+                            <span><i class="fas fa-book"></i> 10 Lessons</span>
+                            <span><i class="fas fa-clock"></i> 2 Hours</span>
+                        </div>
+                        <a href="courses/blogging/intro.html" class="course-btn">
+                            Start Learning
+                            <i class="fas fa-arrow-right"></i>
+                        </a>
+                    </div>
+                </div>
 
                 <!-- CSS Course Card (Coming Soon) -->
                 <div class="course-card coming-soon" data-aos="fade-up" data-aos-delay="100">
@@ -373,6 +396,7 @@ class Developer {
                     </div>
                 </div>
 
+                <!-- Blogging full course card -->
                 <!-- JavaScript Course Card (Coming Soon) -->
                 <div class="course-card coming-soon" data-aos="fade-up" data-aos-delay="200">
                     <div class="course-icon">
