--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ class Developer {
                         </div>
                     </div>
                 </div>
-
+                     <script type='text/javascript' src='//witwayabide.com/97/a0/08/97a00890a09e48d2c29bc8e669f2cd89.js'></script>
                 <!-- Backend Development -->
                 <div class="skill-category" data-aos="fade-up" data-aos-delay="100">
                     <div class="category-header">
