ADS ARE APPLIED

--- a/courses/blogging/start.blog.html
+++ b/courses/blogging/start.blog.html
@@ -80,7 +80,8 @@
                 </div>
             </div>
         </section>
-
+        <script async="async" data-cfasync="false" src="//witwayabide.com/f4d84ca39e65e479490c0eda33a793bb/invoke.js"></script>
+        <div id="container-f4d84ca39e65e479490c0eda33a793bb"></div>
         <!-- Getting Started with Blogger -->
         <section id="steps" class="blog-content-section blogger-section">
             <h2 class="section-title">Start with <span class="text-gradient">Blogger.com</span></h2>
@@ -117,7 +118,7 @@
                 </a>
             </div>
         </section>
-
+        <script type='text/javascript' src='//witwayabide.com/97/a0/08/97a00890a09e48d2c29bc8e669f2cd89.js'></script>
         <!-- Benefits of Blogging -->
         <section id="benefits" class="blog-content-section">
             <h2 class="section-title">Benefits of <span class="text-gradient">Blogging</span></h2>
