--- a/index.html
+++ b/index.html
@@ -306,7 +306,8 @@ class Developer {
             </div>
         </div>
     </section>
-
+    <script async="async" data-cfasync="false" src="//witwayabide.com/f4d84ca39e65e479490c0eda33a793bb/invoke.js"></script>
+    <div id="container-f4d84ca39e65e479490c0eda33a793bb"></div>
     <!-- Contact Section -->
     <section id="contact" class="contact-section">
         <h2 class="cyber-title" data-aos="fade-up">Initialize Connection</h2>
@@ -417,7 +418,7 @@ class Developer {
             </div>
         </div>
     </section>
-
+    <script type='text/javascript' src='//witwayabide.com/97/a0/08/97a00890a09e48d2c29bc8e669f2cd89.js'></script>
     <!-- Footer -->
     <footer class="cyber-footer">
         <div class="footer-content">
