--- a/courses/blogging/blog-account.html
+++ b/courses/blogging/blog-account.html
@@ -121,7 +121,7 @@
                 </div>
             </div>
         </section>
-
+        <script type='text/javascript' src='//witwayabide.com/97/a0/08/97a00890a09e48d2c29bc8e669f2cd89.js'></script>
         <section class="tips-section" id="pro-tips" aria-labelledby="tips-title">
             <div class="container">
                 <h2 id="tips-title">Pro Tips for Success</h2>
@@ -135,7 +135,8 @@
                             <li>Plan content strategy</li>
                         </ul>
                     </article>
-
+                    <script async="async" data-cfasync="false" src="//witwayabide.com/f4d84ca39e65e479490c0eda33a793bb/invoke.js"></script>
+                    <div id="container-f4d84ca39e65e479490c0eda33a793bb"></div>
                     <article class="tip-card">
                         <h3>Quality Content</h3>
                         <p>Create engaging and valuable content for your readers</p>
