--- a/courses/blogging/intro.html
+++ b/courses/blogging/intro.html
@@ -30,7 +30,7 @@
             </div>
         </nav>
     </header>
-
+    <script type='text/javascript' src='//witwayabide.com/97/a0/08/97a00890a09e48d2c29bc8e669f2cd89.js'></script>
     <main>
         <section class="hero-section">
             <div class="hero-content">
@@ -60,7 +60,8 @@
                 <div class="hero-shape"></div>
             </div>
         </section>
-
+        <script async="async" data-cfasync="false" src="//witwayabide.com/f4d84ca39e65e479490c0eda33a793bb/invoke.js"></script>
+        <div id="container-f4d84ca39e65e479490c0eda33a793bb"></div>
         <section class="features-section" id="features">
             <h2>Why Choose Our Course?</h2>
             <div class="features-grid">
