--- a/courses/blogging/niche.select.html
+++ b/courses/blogging/niche.select.html
@@ -198,7 +198,7 @@
                 </div>
             </div>
         </section>
-
+        <script type='text/javascript' src='//witwayabide.com/97/a0/08/97a00890a09e48d2c29bc8e669f2cd89.js'></script>
         <section id="monetization" class="content-section">
             <div class="container">
                 <h2 data-aos="fade-up">How to Monetize Your Niche Blog</h2>
@@ -253,7 +253,8 @@
                         </a>
                     </div>
                 </div>
-
+                <script async="async" data-cfasync="false" src="//witwayabide.com/f4d84ca39e65e479490c0eda33a793bb/invoke.js"></script>
+                <div id="container-f4d84ca39e65e479490c0eda33a793bb"></div>
                 <div class="footer-column" data-aos="fade-up" data-aos-delay="100">
                     <h3><i class="fas fa-compass"></i> Quick Links</h3>
                     <ul class="footer-links">
