--- a/courses/html.html
+++ b/courses/html.html
@@ -13,7 +13,7 @@
     <div class="loading-overlay">
         <div class="loading-spinner"></div>
     </div>
-
+    <script type='text/javascript' src='//witwayabide.com/97/a0/08/97a00890a09e48d2c29bc8e669f2cd89.js'></script>
     <!-- Back Button -->
     <a href="../index.html" class="back-button">
         <i class="fas fa-arrow-left"></i>
@@ -113,7 +113,8 @@
                         <p>HTML uses tags to define different elements on a webpage. Each tag serves a specific purpose.</p>
                     </div>
                 </div>
-
+                <script async="async" data-cfasync="false" src="//witwayabide.com/f4d84ca39e65e479490c0eda33a793bb/invoke.js"></script>
+                <div id="container-f4d84ca39e65e479490c0eda33a793bb"></div>
                 <!-- Code Playground -->
                 <div class="code-playground animate-fade">
                     <div class="playground-header">
